# Ontological-Reasoning-in-Medical-Knowledge-Retrieval

./: .gitignore  README.md  pyproject.toml
data/terminologies/: README.md
docs/: API.md  TERMINOLOGY.md  VIETTEL_MEDICAL_2026.md
docs/btc/: NLP_1.md  NLP_2.md
scripts/: build_icd10_tt06.py  build_rxnorm.py  build_submission.sh
src/clinical_nlp/: btc.py  context.py  deidentification.py  external.py  extraction.py  pipeline.py  relations.py  review.py  schemas.py  terminology.py
src/clinical_nlp/api/: __init__.py  app.py
src/clinical_nlp/cli/: __init__.py  batch.py
tests/: conftest.py  test_api_contract.py  test_context_and_relations.py  test_external_llm.py  test_extraction_large_terminology.py  test_icd10_tt06_builder.py  test_review_and_security.py  test_rxnorm_builder.py  test_terminology_loaders.py  test_vietnamese_medical_pipeline.py
